2019-06-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for ZMQ sources and python3
	* tagged as 2.8.3

2019-05-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix for crash on empty hidra server lineedit
	* tagged as 2.8.2

2019-05-02 Jan Kotanski <jan.kotanski@desy.de>
	* add update of icons on combobox editing finished
	* tagged as 2.8.1

2019-04-26 Jan Kotanski <jan.kotanski@desy.de>
	* add support for eiger2 and 1.8.0 API
	* tagged as 2.8.0

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for update custom color gradient
	* tagged as 2.7.1

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>
	* save/load custom color gradients in configuration
	* tagged as 2.7.0

2019-04-12 Jan Kotanski <jan.kotanski@desy.de>
	* add beam_x and beam_y parameters from CBF
	* save settings to file on change star label change
	* tagged as 2.6.2

2019-04-10 Jan Kotanski <jan.kotanski@desy.de>
	* fixes for NeXus image sources with 1D data
	* tagged as 2.6.1

2019-04-09 Jan Kotanski <jan.kotanski@desy.de>
	* add addtional histogram options: bins and data step
	* impove auto levels finding
	* fetch metadata form CBF and NeXus files
	* tagged as 2.6.0

2019-04-04 Jan Kotanski <jan.kotanski@desy.de>
	* impove auto levels finding
	* add tips with number of nexus frames
	* tagged as 2.5.2

2019-04-02 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading metadata
	* tagged as 2.5.1

2019-04-02 Jan Kotanski <jan.kotanski@desy.de>
	* fetch geometry metadata from source option
	* read geometry metadata from cbf
	* fix for autofactorrange levels on changing tools
	* add order to DetectorROIsParams attribute (change to list)
	* add order to DetectorROIsParams sardana env variable (change to list)
	* tagged as 2.5.0

2019-03-28 Jan Kotanski <jan.kotanski@desy.de>
	* fix for arange: cannot compute length in histogramWidget
	* tagged as 2.4.1

2019-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add DetectorROIsParams attribute and sardana env variable
	* make hidra server combobox editable