@@ -1,5 +1,6 @@
-2019-06-06 Jan Kotanski <jan.kotanski@desy.de>
+2019-06-07 Jan Kotanski <jan.kotanski@desy.de>
 	* fix for ZMQ sources and python3
+	* fix for subtraction of unsigned images
 	* tagged as 2.8.3
 
 2019-05-15 Jan Kotanski <jan.kotanski@desy.de>
